# ai-invoice-extractor

./: .gitignore  .pre-commit-config.yaml  BENCHMARK_CONSOLIDATION_SUMMARY.md  MIGRATION_GUIDE.md  README.md  poe.yaml  pyproject.toml
.github/workflows/: checks.yml  lint.yml  typecheck.yml
benchmarks/: README.md  __init__.py  __main__.py  _utils.py  benchmark.py  benchmark_ai_requester.py  cli.py  config.py  metrics.py  rating.py
src/ai_invoice_extractor/: __init__.py  ai_requester.py  response.py  ticket.py
src/ai_invoice_extractor/prompts/: __init__.py  invoice.py
tests/: run_rating.py  run_rating.py.old  test_ai_requester.py  test_ai_requester_lot.py  test_ai_requester_lot.py.old  test_ticket.py
utils/: uv commands.md  verify_benchmark_consolidation.py
