[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-invoice-extractor"
description = "AI-powered tool for automatically extracting data from invoices"
version = "0.1.0"
authors = [
    {name = "Julien Benac", email = "contact@julienbenac.fr"},
    {name = "Benjamin Nicol", email = "benji.locin@gmail.com"},
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.13"
keywords = ["ai", "ocr", "invoice", "receipt", "factur-x"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "coverage>=7.10.7",
    "hatchling>=1.27.0",
    "ollama>=0.6.0",
    "pdf2image==1.17.0",
    "pytest==8.4.2",
]

[project.urls]
Homepage = "https://github.com/julienbenac/ai-invoice-extractor"

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "ruff>=0.13.0",
]

[tool.poe]
include = "poe.yaml"
